--- a/package.json
+++ b/package.json
@@ -1,29 +1,16 @@
 {
   "name": "whyred-ai-backend",
   "version": "1.0.0",
-  "description": "Backend API for Whyred AI assistant",
-  "main": "src/server.js",
+  "description": "FastAPI Backend for Whyred AI assistant",
+  "main": "main.py",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "build": "npm install",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@google/generative-ai": "^0.2.1",
-    "axios": "^1.6.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "firebase-admin": "^11.11.1",
-    "helmet": "^7.1.0"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.2"
+    "start": "python start.py",
+    "dev": "python start.py",
+    "build": "pip install -r requirements.txt",
+    "install": "pip install -r requirements.txt",
+    "test": "python test_api.py"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "python": ">=3.11.0"
   }
 }
