--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
 python-dotenv==1.0.0
 google-generativeai==0.3.2
 firebase-admin==6.2.0
@@ -7,5 +7,6 @@ httpx==0.25.2
 python-multipart==0.0.6
 slowapi==0.1.9
 pydantic==2.5.0
-cryptography==41.0.7
-grpcio==1.59.3
+cryptography==3.4.8
+grpcio==1.48.2
+protobuf==3.20.3
