--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-python-dotenv==1.0.0
+fastapi==0.68.0
+uvicorn==0.15.0
+python-dotenv==0.19.0
 google-generativeai==0.3.2
-firebase-admin==6.2.0
-httpx==0.25.2
-python-multipart==0.0.6
-slowapi==0.1.9
-pydantic==2.5.0
+firebase-admin==5.4.0
+httpx==0.24.0
+python-multipart==0.0.5
+slowapi==0.1.7
+pydantic==1.10.12
 cryptography==3.4.8
 grpcio==1.48.2
 protobuf==3.20.3
+typing-extensions==4.3.0
