Add root route and fix Cannot GET /

--- a/pip.conf
+++ b/pip.conf
@@ -1,3 +1,8 @@
 [global]
 only-binary = :all:
 no-cache-dir = true
+trusted-host = pypi.org
+               pypi.python.org
+               files.pythonhosted.org
+prefer-binary = true
+no-compile = true
