--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,16 @@ fastapi==0.68.0
 uvicorn==0.15.0
 python-dotenv==0.19.0
 google-generativeai==0.3.2
-firebase-admin==5.4.0
+firebase-admin==5.2.0
 httpx==0.24.0
 python-multipart==0.0.5
 slowapi==0.1.7
 pydantic==1.10.12
 cryptography==3.4.8
-grpcio==1.48.2
-protobuf==3.20.3
+grpcio==1.44.0
+protobuf==3.19.6
 typing-extensions==4.3.0
+grpcio-status==1.44.0
+google-cloud-firestore==2.7.2
+google-cloud-core==2.3.2
+google-auth==2.14.1
