--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ python-multipart==0.0.5
 slowapi==0.1.7
 pydantic==1.10.12
 cryptography==3.4.8
+grpcio==1.43.0
 protobuf==3.19.6
 typing-extensions==4.3.0
